[package]
name = "yrs-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
config = "0.14.0"
dashmap = "6.1.0"
derive_builder = "0.20.1"
dotenvy = "0.15.7"
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false, features = [
    "sink",
    "std",
] }
headers = "0.4"
rand = { version = "0.8.5", features = ["small_rng"] }
redis = { version = "0.27.1", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqids = "0.4.1"
sysinfo = "0.31.4"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = "1.1.3"
yrs = "0.18.2"
yrs-warp = "0.8.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
rand = "0.8"
