[package]
name = "contactor-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
dotenvy = "0.15.7"
redis = { version = "0.27.1", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
] }
tui = { version = "0.19.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
